package basenostates.doorstates;

/**
 * Defines the possible states of a door as constant string values.
 */
public class State {
  public static final String UNLOCKED = "unlocked";
  public static final String LOCKED = "locked";
  public static final String PROPPED = "propped";
  public static final String UNLOCK_SHORTLY = "unlocked_shortly";
}
